feat: upgrade astro
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/src/components/BlogPost.astro
+++ b/src/components/BlogPost.astro
@@ -13,7 +13,7 @@ const { post } = Astro.props;
         post.data.date.getMonth() + 1
     )
         .toString()
-        .padStart(2, "0")}/${post.slug}/`}
+        .padStart(2, "0")}/${post.id}/`}
 >
     <div class="card card-bordered hover:shadow-2xl shadow-lg hover:scale-[101%] my-10 bg-base-100 z-20">
         <div class="card-body">
