--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,7 +1,7 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro";
-import HomeWallpaper from "../components/HomeWallpaper.astro";
-import ToggleTheme from "../components/ToggleTheme.astro";
+import BaseLayout from "../layouts/BaseLayout.astro"
+import HomeWallpaper from "../components/HomeWallpaper.astro"
+import ToggleTheme from "../components/ToggleTheme.astro"
 ---
 
 <BaseLayout>
