--- a/src/pages/blog/[year]/[month]/[slug].astro
+++ b/src/pages/blog/[year]/[month]/[slug].astro
@@ -1,37 +1,42 @@
 ---
-import BaseLayout from "../../../../layouts/BaseLayout.astro";
-import Disclaimer from "../../../../components/Disclaimer.astro";
-import Footer from "../../../../components/Footer.astro";
-import NavBar from "../../../../components/NavBar.astro";
-import ToggleTheme from "../../../../components/ToggleTheme.astro";
-import Tweet from "../../../../components/Tweet.astro";
-import Utterances from "../../../../components/Utterances.astro";
-import { CollectionEntry, getCollection } from "astro:content";
-import { SITE_TITLE } from "../../../../config";
+import BaseLayout from "../../../../layouts/BaseLayout.astro"
+import Disclaimer from "../../../../components/Disclaimer.astro"
+import Footer from "../../../../components/Footer.astro"
+import NavBar from "../../../../components/NavBar.astro"
+import ToggleTheme from "../../../../components/ToggleTheme.astro"
+import Tweet from "../../../../components/Tweet.astro"
+import Utterances from "../../../../components/Utterances.astro"
+import { getCollection, render } from "astro:content"
+import type { CollectionEntry } from "astro:content"
+import { SITE_TITLE } from "../../../../config"
 
 export async function getStaticPaths() {
-    const posts = await getCollection("blog");
-    return posts.map((post) => ({
+    const posts = await getCollection("blog")
+    return posts.map(post => ({
         params: {
             year: post.data.date.getFullYear(),
             month: (post.data.date.getMonth() + 1).toString().padStart(2, "0"),
-            slug: post.slug,
+            slug: post.id
         },
-        props: post,
-    }));
+        props: { post }
+    }))
 }
-type Props = CollectionEntry<"blog">;
-const post = Astro.props;
-const { Content } = await post.render();
-const { title, date, updated, tags, cover_image } = post.data;
 
-const today = new Date().getTime();
-const updated_date = updated > date ? updated.getTime() : date.getTime();
-const pass_year = Math.floor((today - updated_date) / 86400000 / 365);
+interface Props {
+    post: CollectionEntry<"blog">
+}
+const { post } = Astro.props
+
+const { Content } = await render(post)
+const { title, date, updated, tags, cover_image } = post.data
+
+const today = new Date().getTime()
+const updated_date = updated > date ? updated.getTime() : date.getTime()
+const pass_year = Math.floor((today - updated_date) / 86400000 / 365)
 const tab_title = `${title} - ${SITE_TITLE}`
 ---
 
-<BaseLayout twitter=true title={tab_title}>
+<BaseLayout twitter="true" title={tab_title}>
     <NavBar />
     <ToggleTheme />
     <main class="container mx-auto w-5/6 lg:w-2/3">
@@ -55,12 +60,9 @@ const tab_title = `${title} - ${SITE_TITLE}`
             {
                 tags && (
                     <div class="inline">
-                        {tags.map((tag) => (
+                        {tags.map(tag => (
                             <div class="badge badge-accent badge-outline mr-2">
-                                <a
-                                    href={`/tag/${tag}`}
-                                    class="link link-accent link-hover"
-                                >
+                                <a href={`/tag/${tag}`} class="link link-accent link-hover">
                                     {tag}
                                 </a>
                             </div>
@@ -86,8 +88,7 @@ const tab_title = `${title} - ${SITE_TITLE}`
                                 />
                             </svg>
                             <span>
-                                この記事は、最終更新日から {pass_year}{" "}
-                                年以上経過しています。
+                                この記事は、最終更新日から {pass_year} 年以上経過しています。
                                 情報が古い可能性があります。
                             </span>
                         </div>
