--- a/src/pages/project/index.astro
+++ b/src/pages/project/index.astro
@@ -1,10 +1,10 @@
 ---
-import BaseLayout from "../../layouts/BaseLayout.astro";
-import BaseWallpaper from "../../components/BaseWallpaper.astro";
-import Footer from "../../components/Footer.astro";
-import NavBar from "../../components/NavBar.astro";
-import ProjectPost from "../../components/ProjectPost.astro";
-import ToggleTheme from "../../components/ToggleTheme.astro";
+import BaseLayout from "../../layouts/BaseLayout.astro"
+import BaseWallpaper from "../../components/BaseWallpaper.astro"
+import Footer from "../../components/Footer.astro"
+import NavBar from "../../components/NavBar.astro"
+import ProjectPost from "../../components/ProjectPost.astro"
+import ToggleTheme from "../../components/ToggleTheme.astro"
 ---
 
 <BaseLayout>
@@ -24,11 +24,7 @@ import ToggleTheme from "../../components/ToggleTheme.astro";
                 link="competition"
                 description="Kaggle などの機械学習コンペの参加記録です。"
             />
-            <ProjectPost
-                title="Neovim 関連"
-                link="neovim"
-                description="私の好きなエディタ Neovim 関連の活動です。"
-            />
+            <ProjectPost title="Neovim 関連" link="neovim" description="私の好きなエディタ Neovim 関連の活動です。" />
         </main>
         <Footer />
     </BaseWallpaper>
