feat: update content
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/src/components/BlogPost.astro
+++ b/src/components/BlogPost.astro
@@ -1,17 +1,15 @@
 ---
-import type { CollectionEntry } from "astro:content";
+import type { CollectionEntry } from "astro:content"
 
 export interface Props {
-    post: CollectionEntry<"blog">;
+    post: CollectionEntry<"blog">
 }
 
-const { post } = Astro.props;
+const { post } = Astro.props
 ---
 
 <a
-    href={`/blog/${post.data.date.getFullYear()}/${(
-        post.data.date.getMonth() + 1
-    )
+    href={`/blog/${post.data.date.getFullYear()}/${(post.data.date.getMonth() + 1)
         .toString()
         .padStart(2, "0")}/${post.id}/`}
 >
@@ -23,19 +21,15 @@ const { post } = Astro.props;
             </p>
             {
                 post.data.updated > post.data.date ? (
-                    <p class="text-sm">
-                        Updated on {post.data.updated.toLocaleDateString()}
-                    </p>
+                    <p class="text-sm">Updated on {post.data.updated.toLocaleDateString()}</p>
                 ) : null
             }
             {
                 post.data.tags ? (
                     <div class="inline">
-                        {post.data.tags.map((tag) => (
+                        {post.data.tags.map(tag => (
                             <a href={`/tag/${tag}`}>
-                                <div class="badge badge-accent badge-outline mr-2">
-                                    {tag}
-                                </div>
+                                <div class="badge badge-accent badge-outline mr-2">{tag}</div>
                             </a>
                         ))}
                     </div>
