--- a/src/components/ProjectPost.astro
+++ b/src/components/ProjectPost.astro
@@ -1,5 +1,5 @@
 ---
-const { title, description, link } = Astro.props;
+const { title, description, link } = Astro.props
 ---
 
 <a href={`/project/${link}`}>
