--- a/src/components/AllTags.astro
+++ b/src/components/AllTags.astro
@@ -1,17 +1,15 @@
 ---
-import { getCollection } from "astro:content";
+import { getCollection } from "astro:content"
 
-const allPosts = await getCollection("blog");
-const tags = [...new Set(allPosts.map((post) => post.data.tags).flat())].sort(
-    (a, b) => a.localeCompare(b)
-);
+const allPosts = await getCollection("blog")
+const tags = [...new Set(allPosts.map(post => post.data.tags).flat())].sort((a, b) => a.localeCompare(b))
 ---
 
 <details class="dropdown dropdown-end float-right z-40">
-    <summary class="btn btn-ghost text-lg m-1">Tag 一覧はこちら</summary>
+    <summary class="btn btn-ghost text-lg m-1">Tags</summary>
     <ul class="dropdown-content menu p-2 shadow bg-base-200 rounded-box w-52">
         {
-            tags.map((tag) => (
+            tags.map(tag => (
                 <li>
                     <a href={`/tag/${tag}`}>{tag}</a>
                 </li>
