--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,6 +13,7 @@ const { title, description, image = "/blog/new-imokuri-blog.png" } = Astro.props
 <meta charset="utf-8" />
 <link rel="icon" href="/favicon.ico" />
 <link rel="alternate" type="application/rss+xml" title="RSS2.0" href="/rss.xml" />
+<link rel="sitemap" href="/sitemap-index.xml" />
 <meta name="viewport" content="width=device-width" />
 <meta name="generator" content={Astro.generator} />
 
