feat: add event info
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -61,6 +61,12 @@ import TwitterFollow from "../components/TwitterFollow.astro"
                     <h2 class="card-title text-2xl mb-3">Recent Activity</h2>
                     <div class="time-line-container">
                         <TimeLine
+                            title="イベント登壇 - HPE Discover More AI 東京 2025"
+                            date="2025/1"
+                            link_title="AIの本格活用を加速させるPrivate LLM"
+                            link_url="http://www.hpe.com/jp/discover"
+                        />
+                        <TimeLine
                             title="HPE Product Certified - AI and Machine Learning"
                             date="2024/10"
                         />
