feat: use tailwindcss/vite
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,4 +1,6 @@
 ---
+import "../styles/global.css"
+
 import Header from "../components/Header.astro";
 
 import { SITE_TITLE, SITE_DESCRIPTION } from "../config";
