--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,7 @@
+@import "tailwindcss";
+@plugin "@tailwindcss/typography";
+@plugin "daisyui";
+
 .time-line-container > div:last-child .education__time > .education__line {
-    display: none;
+  display: none;
 }
