--- a/src/components/Competition.astro
+++ b/src/components/Competition.astro
@@ -9,7 +9,7 @@ const {
 } = Astro.props;
 ---
 
-<div class="card card-compact w-full bg-base-100 shadow-lg">
+<div class="card card-sm w-full bg-base-100 shadow-lg">
     <figure>
         <img src={image} alt={title} />
     </figure>
