--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -31,7 +31,7 @@ import TwitterFollow from "../components/TwitterFollow.astro"
             <img src="/mail.png" alt="email" />
             <TwitterFollow />
 
-            <div class="card card-bordered shadow-lg my-10 bg-base-100">
+            <div class="card card-border shadow-lg my-10 bg-base-100">
                 <div class="card-body">
                     <h2 class="card-title text-2xl mb-3">Skill</h2>
                     <div class="time-line-container">
@@ -45,7 +45,7 @@ import TwitterFollow from "../components/TwitterFollow.astro"
                 </div>
             </div>
 
-            <div class="card card-bordered shadow-lg my-10 bg-base-100">
+            <div class="card card-border shadow-lg my-10 bg-base-100">
                 <div class="card-body">
                     <h2 class="card-title text-2xl mb-3">Hobby</h2>
                     <div class="time-line-container">
@@ -56,7 +56,7 @@ import TwitterFollow from "../components/TwitterFollow.astro"
                 </div>
             </div>
 
-            <div class="card card-bordered shadow-lg my-10 bg-base-100">
+            <div class="card card-border shadow-lg my-10 bg-base-100">
                 <div class="card-body">
                     <h2 class="card-title text-2xl mb-3">Recent Activity</h2>
                     <div class="time-line-container">
