--- a/src/components/BaseWallpaper.astro
+++ b/src/components/BaseWallpaper.astro
@@ -4,11 +4,8 @@ import Snow from "./Snow.astro";
 
 <Snow />
 
-<div
-    class="min-h-screen bg-cover bg-center bg-fixed"
-    style="background-image: url(/wallpaper.png);"
->
-    <div class="min-h-screen bg-base-100 bg-opacity-50">
+<div class="min-h-screen bg-[url(/wallpaper.png)] bg-cover bg-center bg-fixed">
+    <div class="min-h-screen bg-base-100/50">
         <slot />
     </div>
 </div>
