--- a/src/components/HomeWallpaper.astro
+++ b/src/components/HomeWallpaper.astro
@@ -4,8 +4,8 @@ import Snow from "./Snow.astro";
 
 <Snow />
 
-<div class="hero min-h-screen" style="background-image: url(/wallpaper.png);">
-    <div class="hero-overlay bg-base-100 bg-opacity-50"></div>
+<div class="hero min-h-screen bg-[url(/wallpaper.png)]">
+    <div class="hero-overlay bg-base-100/50"></div>
     <div class="hero-content text-center text-neutral">
         <div class="max-w-md">
             <slot />
