--- a/src/components/HomeWallpaper.astro
+++ b/src/components/HomeWallpaper.astro
@@ -6,7 +6,7 @@ import Snow from "./Snow.astro";
 
 <div class="hero min-h-screen bg-[url(/wallpaper.png)]">
     <div class="hero-overlay bg-base-100/50"></div>
-    <div class="hero-content text-center text-neutral">
+    <div class="hero-content text-center">
         <div class="max-w-md">
             <slot />
         </div>
