--- a/src/components/TimeLine.astro
+++ b/src/components/TimeLine.astro
@@ -10,9 +10,9 @@ const {
 
 <div class="flex">
     <div class="education__time">
-        <span class="w-3 h-3 bg-accent block rounded-full mt-2"></span>
+        <span class="w-3 h-3 bg-primary block rounded-full mt-2"></span>
         <span
-            class="education__line bg-accent block h-full w-[2px] translate-x-[5px]"
+            class="education__line bg-primary block h-full w-[2px] translate-x-[5px]"
         ></span>
     </div>
     <div class="experience__data bd-grid px-5">
