--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -15,7 +15,7 @@ import TwitterFollow from "../components/TwitterFollow.astro"
         <main class="container mx-auto w-5/6 lg:w-2/3">
             <h1 class="my-5 text-4xl font-bold">About Me</h1>
             <div class="avatar my-5">
-                <div class="w-24 rounded-full ring ring-accent ring-offset-base-100 ring-offset-2">
+                <div class="w-24 rounded-full ring ring-primary ring-offset-base-100 ring-offset-2">
                     <img src="/author.jpg" alt="author" />
                 </div>
             </div>
@@ -31,7 +31,7 @@ import TwitterFollow from "../components/TwitterFollow.astro"
             <img src="/mail.png" alt="email" />
             <TwitterFollow />
 
-            <div class="card card-border shadow-lg my-10 bg-base-100">
+            <div class="card card-border shadow-lg my-10 bg-base-100/80">
                 <div class="card-body">
                     <h2 class="card-title text-2xl mb-3">Skill</h2>
                     <div class="time-line-container">
@@ -45,7 +45,7 @@ import TwitterFollow from "../components/TwitterFollow.astro"
                 </div>
             </div>
 
-            <div class="card card-border shadow-lg my-10 bg-base-100">
+            <div class="card card-border shadow-lg my-10 bg-base-100/80">
                 <div class="card-body">
                     <h2 class="card-title text-2xl mb-3">Hobby</h2>
                     <div class="time-line-container">
@@ -56,7 +56,7 @@ import TwitterFollow from "../components/TwitterFollow.astro"
                 </div>
             </div>
 
-            <div class="card card-border shadow-lg my-10 bg-base-100">
+            <div class="card card-border shadow-lg my-10 bg-base-100/80">
                 <div class="card-body">
                     <h2 class="card-title text-2xl mb-3">Recent Activity</h2>
                     <div class="time-line-container">
