--- a/src/pages/project/[project].astro
+++ b/src/pages/project/[project].astro
@@ -1,5 +1,6 @@
 ---
 import BaseLayout from "../../layouts/BaseLayout.astro"
+import DimWallpaper from "../../components/DimWallpaper.astro"
 import Footer from "../../components/Footer.astro"
 import NavBar from "../../components/NavBar.astro"
 import ToggleTheme from "../../components/ToggleTheme.astro"
@@ -24,14 +25,16 @@ const { title } = post.data
 ---
 
 <BaseLayout>
-    <NavBar />
-    <ToggleTheme />
-    <main class="container mx-auto w-5/6 lg:w-2/3">
-        <article class="prose max-w-none">
-            <h1>{title}</h1>
-            <hr />
-            <Content />
-        </article>
-    </main>
-    <Footer />
+    <DimWallpaper>
+        <NavBar />
+        <ToggleTheme />
+        <main class="container mx-auto w-5/6 lg:w-2/3">
+            <article class="prose max-w-none">
+                <h1>{title}</h1>
+                <hr />
+                <Content />
+            </article>
+        </main>
+        <Footer />
+    </DimWallpaper>
 </BaseLayout>
