feat: rename project to activity
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -16,7 +16,7 @@ import { SITE_TITLE } from "../config"
                     <a href="/blog"><i class="fa-solid fa-pencil"></i>Blog</a>
                 </li>
                 <li>
-                    <a href="/project"><i class="fa-solid fa-code"></i>Project</a>
+                    <a href="/activity"><i class="fa-solid fa-code"></i>Activity</a>
                 </li>
             </ul>
         </div>
@@ -27,7 +27,7 @@ import { SITE_TITLE } from "../config"
             <li><a href="/about"><i class="fa-solid fa-user"></i>About</a></li>
             <li><a href="/blog"><i class="fa-solid fa-pencil"></i>Blog</a></li>
             <li>
-                <a href="/project"><i class="fa-solid fa-code"></i>Project</a>
+                <a href="/activity"><i class="fa-solid fa-code"></i>Activity</a>
             </li>
         </ul>
     </div>
