--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,9 +33,9 @@ import { SITE_TITLE } from "../config"
                     </button>
                 </a>
             </div>
-            <div class="tooltip tooltip-bottom" data-tip="Project">
-                <a href="/project">
-                    <button class="btn btn-ghost text-lg" aria-label="Project">
+            <div class="tooltip tooltip-bottom" data-tip="Activity">
+                <a href="/activity">
+                    <button class="btn btn-ghost text-lg" aria-label="Activity">
                         <i class="fa-solid fa-code"></i>
                     </button>
                 </a>
