--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -50,8 +50,11 @@ import TwitterFollow from "../components/TwitterFollow.astro"
                     <h2 class="card-title text-2xl mb-3">Hobby</h2>
                     <div class="time-line-container">
                         <TimeLine title="Ski" />
-                        <TimeLine title="Quiz" />
+                        <TimeLine title="Futsal" />
                         <TimeLine title="Final Fantasy VII" />
+                        <TimeLine title="Quiz" />
+                        <TimeLine title="F1" />
+                        <TimeLine title="Rugby" />
                     </div>
                 </div>
             </div>
