fix: font style
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -72,6 +72,10 @@
   --noise: 1;
 }
 
+@theme {
+    --font-sans: var(--font-mplus2);
+}
+
 .time-line-container > div:last-child .education__time > .education__line {
   display: none;
 }
