--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,32 +1,19 @@
 ---
 import "../styles/global.css"
 
-import Header from "../components/Header.astro";
+import Header from "../components/Header.astro"
 
-import { SITE_TITLE, SITE_DESCRIPTION } from "../config";
-const {
-    image,
-    title = SITE_TITLE,
-    description = SITE_DESCRIPTION,
-    twitter = false,
-} = Astro.props;
+import { SITE_TITLE, SITE_DESCRIPTION } from "../config"
+const { image, title = SITE_TITLE, description = SITE_DESCRIPTION, twitter = false } = Astro.props
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ja" data-theme="latte">
-    <head>
-        <Header title={title} description={description} image={image} />
-        {
-            twitter && (
-                <script
-                    async
-                    src="https://platform.twitter.com/widgets.js"
-                    charset="utf-8"
-                />
-            )
-        }
-    </head>
-    <body>
-        <slot />
-    </body>
+  <head>
+    <Header title={title} description={description} image={image} />
+    {twitter && <script async src="https://platform.twitter.com/widgets.js" charset="utf-8" />}
+  </head>
+  <body>
+    <slot />
+  </body>
 </html>
