feat: update font
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -63,4 +63,4 @@ const { title, description, image = "/blog/new-imokuri-blog.png" } = Astro.props
 
 <!-- Font -->
 <Font cssVariable="--font-mplus2" preload />
-<Font cssVariable="--font-monaspace-argon" preload />
+<Font cssVariable="--font-mplus1-code" preload />
