--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import { SITE_TITLE } from "../config"
     <ToggleTheme />
     <main>
       <h1 class="mb-5 text-4xl font-bold">{SITE_TITLE}</h1>
-      <p class="mb-2 text-lg">Hi, I'm Yoshio Sugiyama who is an infrastructure / ML engineer at HPE Japan.</p>
+      <p class="mb-2 text-lg">Hi, I'm Yoshio Sugiyama, Applied AI Engineer / AI Platform Engineer at HPE Japan.</p>
       <div class="tooltip tooltip-bottom" data-tip="About Me">
         <a href="/about">
           <button class="btn btn-ghost text-lg" aria-label="About Me">
