--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,8 +13,10 @@
   --font-mono: var(--font-mplus1-code);
 }
 
-.body {
-  overflow: hidden;
+body {
+  margin: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .time-line-container > div:last-child .education__time > .education__line {
