--- a/src/components/DataPost.astro
+++ b/src/components/DataPost.astro
@@ -2,13 +2,13 @@
 import type { CollectionEntry } from "astro:content"
 
 export interface Props {
-  post: CollectionEntry<"activity">
+  post: CollectionEntry<"data">
 }
 
 const { post } = Astro.props
 ---
 
-<a href={`/activity/${post.data.slug}`}>
+<a href={`/activity/data/${post.data.slug}`}>
   <div class="card card-border hover:shadow-2xl shadow-lg hover:scale-[101%] my-10 bg-base-100/80">
     <div class="card-body">
       <h2 class="card-title">{post.data.title}</h2>
