--- a/src/pages/activity/index.astro
+++ b/src/pages/activity/index.astro
@@ -7,19 +7,21 @@ import NavBar from "../../components/NavBar.astro"
 import ToggleTheme from "../../components/ToggleTheme.astro"
 import { getCollection } from "astro:content"
 
-const posts = await getCollection("activity");
+const posts = await getCollection("activity")
 ---
 
 <BaseLayout>
-    <BaseWallpaper>
-        <NavBar />
-        <ToggleTheme />
-        <main class="container mx-auto w-5/6 lg:w-2/3">
-            <h1 class="my-5 text-4xl font-bold">Activity</h1>
+  <BaseWallpaper>
+    <NavBar />
+    <ToggleTheme />
+    <main class="container mx-auto w-5/6 lg:w-2/3">
+      <h1 class="my-5 text-4xl font-bold">Activity</h1>
 
-            {posts.map(post => <ActivityPost post={post} />)}
-
-        </main>
-        <Footer />
-    </BaseWallpaper>
+      {posts.map(post => <ActivityPost post={post} />)}
+      <ActivityPost
+        post={{ data: { title: "Data", slug: "data", description: "調べたり、集めたりしたデータです。" } }}
+      />
+    </main>
+    <Footer />
+  </BaseWallpaper>
 </BaseLayout>
