--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -60,6 +60,7 @@ import TwitterFollow from "../components/TwitterFollow.astro"
         <div class="card-body">
           <h2 class="card-title text-2xl mb-3">Recent Activity</h2>
           <div class="time-line-container">
+            <TimeLine title="NVIDIA-Certified Associate - AI Infrastructure and Operations" date="2025/7" />
             <TimeLine
               title="イベント登壇 - HPE Discover More AI 東京 2025"
               date="2025/1"
